@@ -6,6 +6,7 @@ CLI
 ---
 
   o `bst shell --build` will now automatically fetch missing sources.
+  o `bst build --deps` now also accepts "build" as an input.
 
 
 Format
